--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
       "varsIgnorePattern": "^_",
       "ignoreRestSiblings": true
     }],
-    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/no-explicit-any": "warn",
     "@typescript-eslint/no-empty-interface": ["error", {
       "allowSingleExtends": true
     }],
