--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/socket.io": "^3.0.2",
     "axios": "^1.7.9",
     "facebook-nodejs-sdk": "^0.1.0",
-    "next": "15.0.4",
+    "next": "14.1.0",
     "prisma": "^6.0.1",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
@@ -30,8 +30,11 @@
     "encoding": "^0.1.13"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
     "eslint": "^8",
-    "eslint-config-next": "15.0.4",
+    "eslint-config-next": "14.1.0",
+    "eslint-plugin-react": "^7.33.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
