--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "prisma": "^6.0.1",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "zustand": "^4.5.0",
