--- a/package.json
+++ b/package.json
@@ -12,17 +12,26 @@
   "dependencies": {
     "@line/bot-sdk": "^9.5.0",
     "@prisma/client": "^6.0.1",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/socket.io": "^3.0.2",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "facebook-nodejs-sdk": "^0.1.0",
+    "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "prisma": "^6.0.1",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.0",
     "@types/node": "^20",
     "@types/react": "^18",
