--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chat-integration",
+  "name": "chat-integration11",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "facebook-nodejs-sdk": "^0.1.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "prisma": "^6.0.1",
@@ -36,6 +37,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/lodash": "^4.14.202",
     "encoding": "^0.1.13"
   },
   "devDependencies": {
