--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.0",
     "encoding": "^0.1.13",
     "facebook-nodejs-sdk": "^0.1.0",
+    "framer-motion": "^11.0.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
