--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "encoding": "^0.1.13",
     "facebook-nodejs-sdk": "^0.1.0",
     "framer-motion": "^11.0.3",
+    "jose": "^5.2.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
