--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@line/bot-sdk": "^9.5.0",
     "@prisma/client": "^6.0.1",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
