--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
-  
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/socket.io": "^3.0.2",
     "axios": "^1.7.9",
-    "@upstash/redis": "^1.28.3",
-
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "encoding": "^0.1.13",
     "facebook-nodejs-sdk": "^0.1.0",
     "framer-motion": "^11.0.3",
-    "ioredis": "^5.4.2",
     "jose": "^5.2.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.323.0",
