--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@line/bot-sdk": "^9.5.0",
+    "cloudinary": "^2.0.1",
+    "next-cloudinary": "^5.20.0",
     "@prisma/client": "^6.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.0.4",
